tests/regression/error/hw5_error10.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_CALL {args=[EXP_BOOL true],func=EXP_ID "f"}}]}
  : program
;
